# latex_2_physics

./: .flake8  .gitignore  .readthedocs.yaml  DSL_REFERENCE.md  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
docs/: api.rst  conf.py  examples.rst  index.rst  install.rst  usage.rst  welcome.rst
docs/examples/: custom_backend.rst  example.rst  example_backend_extensibility.rst  example_boson_number.rst  example_scqubits.rst  (+12 more)
examples/: custom_backend.py  example.py  example_backend_extensibility.py  example_boson_number.py  example_cache_wrapper.py  example_collapse_ops.py  example_custom_subsystem.py  example_ir_debugging.py  example_jax_autodiff_workflow.py  example_numpy_backend.py  example_operator_functions_advanced.py  example_param_validation_and_aliases.py  example_qutip_brme_dsl.py  example_scqubits.py  example_static_qubit.py  example_time_dependent_drive.py  qutip_example.ipynb
latex_parser/: __init__.py  auto_config.py  backend_base.py  backend_cache.py  backend_jax.py  backend_numpy.py  backend_qutip.py  backend_utils.py  compile_core.py  config_utils.py  constants.py  dsl.py  dsl_constants.py  errors.py  ir.py  latex_api.py  operator_functions.py
tests/: test_auto_config.py  test_backend_base.py  test_backend_branches.py  test_backend_cache.py  test_backend_equivalence.py  test_backend_jax.py  test_backend_jax_opt.py  test_backend_numpy.py  test_backend_qutip.py  test_backend_registry.py  test_config_utils.py  test_custom_backend_extensibility.py  test_dsl.py  test_errors.py  test_ir.py  test_latex_api.py  test_operator_functions.py
