[tool.black]
line-length = 88
target-version = ["py313"]
exclude = '''
/(
    \.git
  | \.tox
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip = [".tox", "build", "dist", "__pycache__"]

[tool.coverage.run]
branch = true
source = ["latex_parser", "tests"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
