[project]
name = "latex_parser"
version = "0.1.0"
description = "A package converting physics-style LaTeX to quantum simulation backends (QuTiP, NumPy, JAX)."
readme = "README.md"
license = { text = "Apache License 2.0" }
authors = [
    { name = "Kareem H. El-Safty", email = "kareemessafty@gmail.com" }
]
maintainers = [
    { name = "Kareem H. El-Safty", email = "kareemessafty@gmail.com" }
]
keywords = ["quantum", "quantum-machine-learning", "photonic", "simulation", "latex", "dsl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.13"

[project.urls]
Homepage = "https://github.com/tqsd/latex_2_physics/"
Source = "https://github.com/tqsd/latex_2_physics"
Documentation = "https://latex-2-physics.readthedocs.io/en/latest/index.html"